test_cases/semantic-error/semantic-error.cpp
void main() {
  int x;
  char a;

  char b = 's';
  char c = 's';
  string d = "sasd";

  x = a;
}